--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <!-- Slider -->
-    <section id="slider"><a href="#"><img src="images/demo/YUKI.JPG" width="960" height="380" alt=""></a></section>
+    <section id="slider"><a href="#"><img src="images/demo/YUKI.jpg" width="960" height="380" alt=""></a></section>
     <!-- main content -->
     <div id="homepage">
       <!-- Services -->
@@ -52,7 +52,7 @@
           </figure>
         </article>
         <article class="one_third lastbox">
-          <figure><img src="images/demo/DUDU.JPG" width="290" height="180" alt="">
+          <figure><img src="images/demo/DUDU.jpg" width="290" height="180" alt="">
             <figcaption>
               <h2>肉包</h2>
               <p>唯一的小男生，又著乳牛斑紋，如女孩子般的可愛，但很調皮.</p>
@@ -69,7 +69,7 @@
       <!-- Introduction -->
       <section id="intro" class="last clear">
         <article>
-          <figure><img src="images/demo/YUYU.JPG" width="450" height="250" alt="">
+          <figure><img src="images/demo/YUYU.jpg" width="450" height="250" alt="">
             <figcaption>
               <h2>YUKI</h2>
               <p>兩歲的女孩，是家中的至寶，有著玳瑁花紋</a></p>
